--- a/vet-clinic/app/globals.css
+++ b/vet-clinic/app/globals.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.headings-sm {
+  @apply text-center text-[1.7rem] font-semibold text-dblue;
+}
